Add reply to reply queue v1
